git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@494 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/gwt/README
+++ b/gwt/README
@@ -1,6 +1,6 @@
 == Intent == 
 
-A simple C/S [[Web Application|WebApp] for companies
+A simple C/S [[Web Application|WebApp]] for companies
 
 == Languages ==
 
