git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@496 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/gwt/README
+++ b/gwt/README
@@ -31,12 +31,11 @@ Via [[asynchronous communication]] the server provides functionality for cutting
 The server allows the client to retrieve instances of [[Serialization|serializable]] classes of the company's [[object model]].
 The client presents the provided functionality and retrieved data via predefined [[GUI]] components.
  
-
 == Architecture ==
 
 '''Client''': 
 Client classes are to be found in the client package. See ''org.softlang.client''.
-There is the GUI and a special [[101feature:Company]] object model for the client. See ''org.softlang.client.company'' for the latter.
+There is the GUI and a special [[101feature:Company]] object model for the client with classes that support [[101feature:Serialization]]. See ''org.softlang.client.company'' for the latter.
 This object model holds "shallow" data for the widgets. The entry point for the client is the ''Gwt.java'' class.
 Here we describe the app's client side appearance and functionality.
 
