git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@499 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -32,7 +32,7 @@ That is, this project's object model is mapped to a relational schema, which use
 
 == Motivation == 
 
-An [[object model]] for companies is provided, as well as classes to total and 101feature:Cut|cut salaries.
+An [[object model]] for companies is provided, as well as classes to total and cut salaries.
 This is, we apply a basic style of [[OO programming]]. Instances of the company model are [[Persistence|persisted]] by making use of the [[Technology:Hibernate]]
 technology. To that end the [[O/R mapping]] is realized by making use of [[Language:XML]]-mapping files both for departments and employees. 
 
