git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@508 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/README
+++ b/jdbc/README
@@ -15,3 +15,10 @@ Prerequisites:
 - A suitable JDBC Driver for MySQL:
   An appropriate driver is available through the project "library".
   See the corresponding JAR in the build path of the present project. 
+  
+
+== Issues ==
+
+Load and save needs to become lazier.
+* Reported: Ralf
+* Assigned:Thomas
