Improvements of README
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@519 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -26,8 +26,8 @@ advanced modular implementations of some features in [[Language:AspectJ]]
 
 Some concepts of [[aspect-oriented programming]] are put to work. The starting 
 point is a simple [[object model]] for companies without any interesting methods,
-but only [[getter]]s, [[setter]]s, and [[constructor]]s. A [[query]] for totaling 
-salaries and a [[:Category:transformation]] for cutting salaries are provided
+but only [[getter]]s, [[setter]]s, and [[constructor method]]s. A [[query]] for
+totaling salaries and a [[:Category:transformation]] for cutting salaries are provided
 by means of [[inter-type declaration]]s. Logging is supported by [[around advice]]
 attached to any call for cutting salaries. These implementations are all arguably
 more modular than implementations that would only use basic concepts of 
