--- a/xslt/README
+++ b/xslt/README
@@ -1,9 +1,36 @@
-We address the 101companies scenarios with XSLT.
+== Intent ==
+
+exercise the basic 101companies features with XSLT
+
+== Languages ==
+
+* [[Language:XSLT]]
+
+== Technologies ==
+
+Any XSLT implementation may do.
+
+* [[Technology:xsltproc]]
+* [[Technology:Saxon]]
+
+== Features ==
+
+* [[101feature:Company]]
+* [[101feature:Total]]
+* [[101feature:Cut]]
+* [[101feature:Depth]]
+
+== Usage ==
+
 See the Makefile for running some tests.
-We use the xsltproc implementation available on OS X, Linux et al.
+
+An xsltproc implementation is readily available on OS X, Linux et al.
+
+A version of Saxon is included in the code repository for this implementation.
 
 Tested with this version of xsltproc:
 
+<pre>
 $ xsltproc -V
 Using libxml 20703, libxslt 10124 and libexslt 813
 xsltproc was compiled against libxml 20703, libxslt 10124 and libexslt 813
@@ -12,18 +39,22 @@ libexslt 813 was compiled against libxml 20703
 
 Also possible to work with Saxon from:
 	http://saxon.sourceforge.net/ or http://www.saxonica.com/
+</pre>
 
 Tested with this version of Saxon:
 
+<pre>
 $ java -jar ../library/saxon/saxon9he.jar
 No source file name
 Saxon-HE 9.2.1.2J from Saxonica
 Usage: see http://www.saxonica.com/documentation/using-xsl/commandline.html
 Options: 
    ...
-
+</pre>
 
 Tested on the following machines:
+
+<pre>
 	Darwin ... 9.8.0 Darwin Kernel Version 9.8.0: Wed Jul 15 16:55:01 PDT 2009; root:xnu-1228.15.4~1/RELEASE_I386 i386
 		(both test-xsltproc and test-saxon)
 	Linux ... 2.6.32-21-generic #32-Ubuntu SMP Fri Apr 16 08:09:38 UTC 2010 x86_64 GNU/Linux
@@ -34,3 +65,9 @@ Tested on the following machines:
 		(only test-xsltproc due to the lack of any Java)
 	Microsoft Windows XP [Version 5.1.2600]
 		(only saxon due to the lack of xsltproc)
+</pre>
+
+== Contributors ==
+
+* [[Contributor:Ralf Lämmel]]
+* [[Contributor:Vadim Zaytsev]]
