git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@527 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/mobl/README
+++ b/mobl/README
@@ -22,5 +22,6 @@ To demo execute "java -jar fileserver.jar 8080 www" in the project's directory a
 open http://localhost:8080/companies.html in your browser.
 
 == Contributors ==
-* Zef Hemel 
-* Thomas Schmorleiz
+
+* [[Contributor:Zef Hemel]]
+* [[Contributor:Thomas Schmorleiz]]
