Remove cross-project dependencies. Convert README to new style---more or less.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@534 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/README
+++ b/xquery/README
@@ -4,6 +4,7 @@ exercise the basic 101companies features with XQuery
 
 == Languages ==
 
+* [[Language:XML]]
 * [[Language:XQuery]]
 
 == Technologies ==
