--- a/xslt/README
+++ b/xslt/README
@@ -4,6 +4,7 @@ exercise the basic 101companies features with XSLT
 
 == Languages ==
 
+* [[Language:XML]]
 * [[Language:XSLT]]
 
 == Technologies ==
