Improved XML-related READMEs
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@583 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/README
+++ b/xquery/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-exercise [[:Category:XML_processing]] with [[Language:XQuery]]
+exercise [[:Category:XML processing]] with [[Language:XQuery]]
 
 == Languages ==
 
