--- a/xslt/README
+++ b/xslt/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-exercise XML transformation with XSLT
+exercise [[:Category:XML processing]] with [[Language:XSLT]]
 
 == Languages ==
 
