--- a/cobol/README
+++ b/cobol/README
@@ -42,4 +42,8 @@ its runtime.
 
 == Issues ==
 
-It would be interested to provide a Cobol-like user interface.
+It would be interesting to provide a Cobol-like user interface.
+
+== Contributors ==
+
+* [[Contributor:Ralf Lämmel]]
